Stripped down version.

--- a/pillar.example
+++ b/pillar.example
@@ -5,12 +5,6 @@ firewall:
   services:
     ssh:
       block_nomatch: False
-      ips_allow:
+      ips:
         - 192.168.0.0/24
         - 10.0.2.2/32
-  #Suppport nat
-  # iptables -t nat -A POSTROUTING -o eth0 -s 192.168.18.0/24 -j MASQUERADE
-  nat:
-    eth0:
-      ips_allow:
-        - 192.168.18.0/24
